--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 							<div class="resume-profile-holder text-center">
 								<img class="resume-profile-pic rounded-circle" src="assets/images/profile.png" alt="image">
 								
-								<h2 class="resume-name text-uppercase">Daniel Lopez </h2>
-								<div class="resume-role-title text-uppercase">Senior App Developer</div>
+								<h2 class="resume-name text-uppercase">SoPhat Saom </h2>
+								<div class="resume-role-title text-uppercase">System Adminstrator</div>
 								<div class="resume-contact mt-4">
 									<ul class="resume-contact-list list-unstyled list-inline mb-0 justify-content-between">
-										<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-telephone-inbound me-2"></i> +123-4567890</li>
-										<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-envelope me-2"></i> hello@yourwebsite.com</li>
+										<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-telephone-inbound me-2"></i> +85596 85 15 612</li>
+										<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-envelope me-2"></i> sophat.saom@gmail.com</li>
 										<li class="list-inline-item me-lg-5"><i class="resume-contact-icon bi bi-globe me-2"></i> www.yourwebsite.com</li>
 									</ul>
 								</div><!--//resume-contact-->
