--- a/index.html
+++ b/index.html
@@ -104,6 +104,21 @@
 													    <li>Server Hardware Maintenance, Replacement, Cable management</li>
 														<li>Manage and add all VMs nodes into Solawind for performance monitoring</li>
 														<li>Manager, Maintenance, Upgrade Banking System (Bankong, Switching, RFT, FAS</li>
+														<li>Working with NBC for looking support all System related with NBC</lib>
+														<li>Maintenance Space and Manage LVM Linux Servers</lib>
+														<li>Maintenance and Manage on Satellite System for managing Redhat platform</lib>
+														<li>Maintenance and Manage on AMQ system container</lib>
+														<li>Oracle Setup and Maintenance (Oracle 12c, Oracle 19c)</lib>  
+														<li>Manager all Linux Operation System Functions (RedHat, CentOS, Ubuntu…)</lib>
+														<li>Patching, Upgrade OS of Linux</lib>
+														<li>Server Hardening base on CIS files</lib>
+														<li>Manage, Install, Backup, Restore Database (Oracle, Mairadb, PostgreSQL,…)</lib>
+														<li>Manage, Configure Application Java, Web Service (Apache, Apache Tomcat)</lib>
+														<li>Responsible for new project implementation on Linux Environment</lib>
+														<li>Weekly and Monthly Report to Line manager for status and process of project</lib>
+														<li>Checklist and Documentation</lib>
+
+
 												    </ul>
 												    
 											    </div><!--//resume-timeline-item-desc-->
