--- a/index.html
+++ b/index.html
@@ -187,6 +187,32 @@
 											    </div><!--//resume-timeline-item-desc-->
 	
 										    </article><!--//resume-timeline-item-->
+
+										    <article class="resume-timeline-item position-relative">
+											    <div class="resume-timeline-item-header mb-2">												    
+												    <div class="resume-position-meta d-flex justify-content-between mb-1">
+													    <div class="resume-position-time">July-2016 - October-2016</div>
+													    <div class="resume-company-name">Proseth Solution Co.Ltd</div>
+												    </div>
+											        <h3 class="resume-position-title mb-1">IT Technicain Intership</h3>
+
+											    </div><!--//resume-timeline-item-header-->
+											    <div class="resume-timeline-item-desc">
+												    <ul class="resume-timeline-list">
+													    <li>Install Operating System (Windows and Linux) on servers and clients</lib>  
+														<li>Installed and configure Hyper-V, AD, DNS, Mail Exchange 2013</lib>
+														<li>Basic configure on FortiGate firewall</lib>  
+														<li>Maintenance kit and connect printers</lib>  
+														<li>Maintenance hardware and software on Computers</lib> 
+														<li>Maintenance and update antivirus on computer client</lib>
+													  
+												    </ul> 
+											    </div><!--//resume-timeline-item-desc-->
+	
+										    </article><!--//resume-timeline-item-->
+
+
+
 							            </div><!--//resume-timeline-->
 									</section><!--//resume-experience-section-->
 
