--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 
 
 
+
 							            </div><!--//resume-timeline-->
 									</section><!--//resume-experience-section-->
 
@@ -221,30 +222,32 @@
 
 
 									<section class="resume-skills-section resume-section">
-										<h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-gear me-2"></i>Tech Stack</h3>
+										<h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-gear me-2"></i>Skills</h3>
 										
 										<ul class="list-unstyled">
+
 								        <li class="mb-2">
-								            <div class="resume-skill-name">JavaScript</div>
+								            <div class="resume-skill-name">System Administrator</div>
 											<div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">
 											  <div class="progress-bar resume-progress-bar" style="width: 98%"></div>
 											</div>
+
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">ReactJS</div>
+								            <div class="resume-skill-name">Network Administrator</div>
 								            <div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
 											  <div class="progress-bar resume-progress-bar" style="width: 95%"></div>
-											</div>
-									        
+											</div>  
 								        </li>
+
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Python</div>
+								            <div class="resume-skill-name">Techical Support</div>
 									        <div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">
 											  <div class="progress-bar resume-progress-bar" style="width: 92%"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">MongoDB</div>
+								            <div class="resume-skill-name">Database</div>
 									        <div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100">
 											  <div class="progress-bar resume-progress-bar" style="width: 86%"></div>
 											</div>
